--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -79,6 +79,15 @@ dependencies:
   # geolocator
   geolocator: ^13.0.2
 
+  # google_maps_flutter
+  google_maps_flutter: ^2.10.0
+
+  # carousel_slider
+  carousel_slider: ^5.0.0
+
+  # smooth_page_indicator
+  smooth_page_indicator: ^1.2.0+3
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
