--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -88,6 +88,12 @@ dependencies:
   # smooth_page_indicator
   smooth_page_indicator: ^1.2.0+3
 
+  # dotted_line
+  dotted_line: ^3.2.3
+
+  # image_gallery_saver
+  image_gallery_saver: ^2.0.3
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
