--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -94,6 +94,9 @@ dependencies:
   # image_gallery_saver
   image_gallery_saver: ^2.0.3
 
+  # circular_countdown_timer
+  circular_countdown_timer: ^0.2.3
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
