--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -97,6 +97,9 @@ dependencies:
   # circular_countdown_timer
   circular_countdown_timer: ^0.2.3
 
+  # firebase_auth
+  firebase_auth: ^5.4.1
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
