--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -97,8 +97,13 @@ dependencies:
   # circular_countdown_timer
   circular_countdown_timer: ^0.2.3
 
+  swipe_refresh: ^1.1.2
+
   # firebase_auth
   firebase_auth: ^5.4.1
+
+  # geocoding
+  geocoding: ^3.0.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
