--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -105,6 +105,9 @@ dependencies:
   # geocoding
   geocoding: ^3.0.0
 
+  # image_picker
+  image_picker: ^1.1.2
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
