--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>CADisableMinimumFrameDurationOnPhone</key>
+	<true/>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleDisplayName</key>
@@ -22,12 +24,28 @@
 	<string>????</string>
 	<key>CFBundleVersion</key>
 	<string>$(FLUTTER_BUILD_NUMBER)</string>
+	<key>ITSAppUsesNonExemptEncryption</key>
+	<false/>
 	<key>LSRequiresIPhoneOS</key>
+	<true/>
+	<key>NSBiometricsUsageDescription</key>
+	<string>We need access to biometric authentication to secure your account.</string>
+	<key>NSCameraUsageDescription</key>
+	<string>We need access to your camera to capture images for verification.</string>
+	<key>NSFaceIDUsageDescription</key>
+	<string>We need access to Face ID for authentication.</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>We need your location to provide nearest service providers</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>We need your location to provide nearest service providers</string>
+	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
 	<string>Main</string>
+	<key>UIStatusBarStyle</key>
+	<string></string>
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
@@ -41,21 +59,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
-	<key>CADisableMinimumFrameDurationOnPhone</key>
-	<true/>
-	<key>UIApplicationSupportsIndirectInputEvents</key>
-	<true/>
-	<key>NSCameraUsageDescription</key>
-	<string>We need access to your camera to capture images for verification.</string>
-	<key>NSFaceIDUsageDescription</key>
-	<string>We need access to Face ID for authentication.</string>
-	<key>NSBiometricsUsageDescription</key>
-	<string>We need access to biometric authentication to secure your account.</string>
-    <key>NSLocationWhenInUseUsageDescription</key>
-    <string>We need your location to provide nearest service providers</string>
-    <key>NSLocationAlwaysUsageDescription</key>
-    <string>We need your location to provide nearest service providers</string>
-
-
+	<key>UIUserInterfaceStyle</key>
+	<string>Light</string>
 </dict>
 </plist>
